docs: add §2.5 final-field/JMM analysis and §4.6 SerialEntry final-field benefit
Agent-Logs-Url: https://github.com/pfirmstone/JGDMS/sessions/d3d884dd-0a86-4626-9cff-07399834788f

Co-authored-by: pfirmstone <11625778+pfirmstone@users.noreply.github.com>